# migrate-uv-demo

./: .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci-test.yml
python/migrate_uv_demo/: __init__.py
python/tests/: test_all.py
src/: lib.rs
