[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "migrate-uv-demo"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "attrs>=24.0.0,<25; python_version >= '3.10' and python_version < '4.0'",
    "pyarrow>=13.0.0,<19; python_version >= '3.10' and python_version < '4.0'",
]

[project.optional-dependencies]
duckdb = [
    "duckdb>=0.10.3,<2 ; python_version >= '3.10' and python_version < '4.0'"
]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.poetry]
name = "migrate-uv-demo"
version = "0.1.0"
description = ""
authors = ["Daniel Mesejo <mesejoleon@gmail.com>"]
readme = "README.md"
packages = [
	{ include = "migrate_uv_demo", from = "python" },
]

[tool.poetry.dependencies]
python = "^3.10"
pyarrow = "^18.1.0"
attrs = "^24.3.0"
duckdb = {version = ">=0.10.3,<2", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
pre-commit = "^4.0.1"
maturin = "^1.8.1"

[tool.poetry.extras]
duckdb = ["duckdb"]
