[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "migrate-uv-demo"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "attrs>=24.0.0,<25; python_version >= '3.10' and python_version < '4.0'",
    "pyarrow>=13.0.0,<19; python_version >= '3.10' and python_version < '4.0'",
]
authors = [
    {name = "Daniel Mesejo", email = "mesejoleon@gmail.com"},
]
description = ""
readme = "README.md"

[project.optional-dependencies]
duckdb = [
    "duckdb>=0.10.3,<2 ; python_version >= '3.10' and python_version < '4.0'"
]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.3.4",
    "black<25.0.0,>=24.10.0",
    "pre-commit<5.0.0,>=4.0.1",
    "maturin<2.0.0,>=1.8.1",
    "pip>=24.3.1",
]
